--- a/buscador.kv
+++ b/buscador.kv
@@ -41,40 +41,57 @@ MDScreen:
         pos_hint: {'center_x': 0.5, 'center_y': 0.22}
         size_hint: 1, 0.5
 
-        MDLabel:
-            border_radius: 20
-            radius: [15]
+        MDCard:
+            radius: dp(10)
             padding: "5dp"
             size_hint: 1, 0.2
-            id: saida_dados_cep
-            theme_text_color: "Custom"
-            text_color: 255/255, 255/255, 255/255, 1
             md_bg_color: 66/255, 135/255, 245/255, 1
-        MDLabel:
+
+            MDLabel:
+                id: saida_dados_cep
+                theme_text_color: "Custom"
+                text_color: 255/255, 255/255, 255/255, 1
+
+        MDCard:
+            radius: dp(10)
             padding: "5dp"
             size_hint: 1, 0.2
-            id: saida_dados_logradouro
-            theme_text_color: "Custom"
-            text_color: 255/255, 255/255, 255/255, 1
             md_bg_color: 66/255, 135/255, 245/255, 1
-        MDLabel:
+
+            MDLabel:
+                id: saida_dados_logradouro
+                theme_text_color: "Custom"
+                text_color: 255/255, 255/255, 255/255, 1
+
+        MDCard:
+            radius: dp(10)
             padding: "5dp"
             size_hint: 1, 0.2
-            id: saida_dados_bairro
-            theme_text_color: "Custom"
-            text_color: 255/255, 255/255, 255/255, 1
             md_bg_color: 66/255, 135/255, 245/255, 1
-        MDLabel:
+
+            MDLabel:
+                id: saida_dados_bairro
+                theme_text_color: "Custom"
+                text_color: 255/255, 255/255, 255/255, 1
+
+        MDCard:
+            radius: dp(10)
             padding: "5dp"
             size_hint: 1, 0.2
-            id: saida_dados_cidade
-            theme_text_color: "Custom"
-            text_color: 255/255, 255/255, 255/255, 1
             md_bg_color: 66/255, 135/255, 245/255, 1
-        MDLabel:
+
+            MDLabel:
+                id: saida_dados_cidade
+                theme_text_color: "Custom"
+                text_color: 255/255, 255/255, 255/255, 1
+
+        MDCard:
+            radius: dp(10)
             padding: "5dp"
             size_hint: 1, 0.2
-            id: saida_dados_estado
-            theme_text_color: "Custom"
-            text_color: 255/255, 255/255, 255/255, 1
             md_bg_color: 66/255, 135/255, 245/255, 1
+
+            MDLabel:
+                id: saida_dados_estado
+                theme_text_color: "Custom"
+                text_color: 255/255, 255/255, 255/255, 1
